frontend hided, document view endpoint added, upload and embedd endpoint added to the api
